Fix: responsive header

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="bg-background text-white shadow-sm sticky top-0 z-50">
+<header class="bg-background text-white shadow-sm fixed top-0 z-50 w-full">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
 
         <!-- Logo -->
@@ -122,7 +122,7 @@
                 <span>SQL</span>
             </div>
             <div class="flex flex-col items-center" data-aos="zoom-in" data-aos-delay="250">
-                <img src="assets/tech/springboot.svg" alt="Spring Boot" class="w-14 h-14 mb-2" />
+                <img src="assets/tech/spring.svg" alt="Spring Boot" class="w-14 h-14 mb-2" />
                 <span>Spring Boot</span>
             </div>
             <div class="flex flex-col items-center" data-aos="zoom-in" data-aos-delay="300">
