Feat: Favicon added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -106,7 +106,13 @@
 
 <section id="tecnologias" class="bg-background text-white py-24 px-6 scroll-mt-32">
     <div class="max-w-6xl mx-auto text-center" data-aos="fade-up">
-        <h2 class="text-4xl font-bold text-white mb-12">Tecnologías que usamos</h2>
+        <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-white text-center mb-16 relative inline-block after:block after:absolute after:w-2/3 after:h-1 after:bg-main after:-bottom-4 after:left-1/2 after:-translate-x-1/2 after:rounded-full after:shadow-[0_0_20px_#dd0e7c]"
+            data-aos="fade-up">
+            Tecnologías que usamos
+        </h2>
+
+
+
 
         <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-10 justify-items-center">
             <div class="flex flex-col items-center" data-aos="zoom-in" data-aos-delay="100">
@@ -153,7 +159,11 @@
 <!-- Servicios -->
 <section class="bg-background text-white py-20 px-6" id="servicios">
     <div data-aos="fade-up" class="max-w-6xl mx-auto text-center">
-        <h2 class="text-3xl font-semibold mb-6 text-main">Servicios</h2>
+        <h2
+            class="text-3xl sm:text-4xl md:text-5xl font-bold text-white relative inline-block after:block after:absolute after:w-2/3 after:h-1 after:bg-main after:-bottom-2 after:left-1/2 after:-translate-x-1/2 after:rounded-full after:shadow-[0_0_20px_#dd0e7c] mb-6">
+            Servicios
+        </h2>
+
         <p class="text-white/80 mb-12">Esto es lo que podemos hacer por vos:</p>
         <div class="grid md:grid-cols-3 gap-8">
             <div class="bg-zinc-900 p-6 rounded-xl border border-border hover:shadow-lg transition" data-aos="zoom-in"
