Feat: Add linkedin link

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -278,10 +278,11 @@
 </section>
 
 
+<!-- Línea divisoria animada -->
+<div class="h-1 bg-gradient-to-r from-main via-hover to-main animate-pulse opacity-70"></div>
 
-
-<footer class="bg-[#0b000c] text-white px-6 py-10">
-    <div data-aos="fade-up"
+<footer class="bg-[#0b000c] text-white px-6 py-10 min-h-[336px]">
+    <div 
         class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-center text-center lg:text-left">
 
         <!-- Logo + link -->
@@ -303,6 +304,11 @@
             <div data-aos="fade-right" class="flex items-center gap-3">
                 <i class="fas fa-envelope text-main"></i>
                 <a href="mailto:info@sieteideas.com.ar" class="hover:underline">{{'info@sieteideas.com.ar'}}</a>
+            </div>
+            <!-- Linkedin -->
+            <div data-aos="fade-left" class="flex items-center gap-3">
+                <i class="fab fa-linkedin text-main"></i>
+                <a href="https://www.linkedin.com/company/siete-ideas/posts/?feedView=all" target="_blank" class="hover:underline">Siete Ideas</a>
             </div>
         </div>
 
