--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,11 +35,12 @@
         <a href="#servicios" class="flex items-center gap-2 hover:text-main" (click)="toggleMenu()">
             <i class="fas fa-briefcase"></i>Servicios
         </a>
-        <a href="#contacto" class="bg-main text-white px-6 py-2 rounded-full font-semibold text-lg
-         shadow-[0_0_20px_#ff1f43] hover:shadow-[0_0_30px_#ff4757]
-         transition-all duration-300">
-            <i class="fas fa-envelope mr-2"></i>Contacto
+        <a href="#contacto"
+            class="flex items-center justify-center gap-2 bg-main hover:bg-hover text-white px-4 py-2 rounded-full w-full sm:w-fit mt-2 shadow-[0_0_10px_#ff1f43] hover:shadow-[0_0_15px_#ff4757] transition-all"
+            (click)="toggleMenu()">
+            <i class="fas fa-envelope"></i> Contacto
         </a>
+
 
     </div>
     }
@@ -282,7 +283,7 @@
 <div class="h-1 bg-gradient-to-r from-main via-hover to-main animate-pulse opacity-70"></div>
 
 <footer class="bg-[#0b000c] text-white px-6 py-10 min-h-[336px]">
-    <div 
+    <div
         class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-center text-center lg:text-left">
 
         <!-- Logo + link -->
@@ -308,7 +309,8 @@
             <!-- Linkedin -->
             <div data-aos="fade-left" class="flex items-center gap-3">
                 <i class="fab fa-linkedin text-main"></i>
-                <a href="https://www.linkedin.com/company/siete-ideas/posts/?feedView=all" target="_blank" class="hover:underline">Siete Ideas</a>
+                <a href="https://www.linkedin.com/company/siete-ideas/posts/?feedView=all" target="_blank"
+                    class="hover:underline">Siete Ideas</a>
             </div>
         </div>
 
