Feat: Video added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -47,13 +47,20 @@
 </header>
 
 <!-- Hero -->
-<section id="inicio" class="scroll-mt-32 relative bg-background text-white py-32 px-6">
+<section id="inicio" class="scroll-mt-32 relative  text-white py-32 px-6 min-h-[100dvh] flex items-center">
     <div data-aos="fade-up" class="max-w-6xl mx-auto text-center">
         <h1 class="text-4xl md:text-6xl font-bold leading-tight">
             Convertimos tus ideas en <span class="text-main">Soluciones Digitales</span>
         </h1>
     </div>
+
+    <video autoplay muted loop playsinline
+        class="videoBg absolute top-0 left-0 w-full h-full object-cover z-[-10] pointer-events-none">
+        <source src="assets/tech/fondo.mp4" type="video/mp4" />
+    </video>
 </section>
+
+
 
 <!-- Línea divisoria animada -->
 <div class="h-1 bg-gradient-to-r from-main via-hover to-main animate-pulse opacity-70"></div>
