--- a/src/app/app.html
+++ b/src/app/app.html
@@ -47,26 +47,19 @@
 </header>
 
 <!-- Hero -->
-<section id="inicio" class="scroll-mt-32 relative text-white py-32 px-6 min-h-[100dvh] flex items-center">
-    <!-- Overlay con gradiente -->
-    <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/30 to-black/10 z-[-1]"></div>
+<section id="inicio" class="bg-background scroll-mt-32 relative text-white py-32 px-6 min-h-[100dvh] flex items-center z-[-20]">
+    <!-- Partículas de fondo -->
+    <ng-particles class="absolute inset-0 w-full h-full z-[-1]" #particlesRef [id]="'tsparticles'"
+        [options]="particlesOptions2" [particlesInit]="particlesInit">
+    </ng-particles>
 
-    <!-- Contenido -->
-    <div data-aos="fade-up" class="max-w-6xl mx-auto text-center z-10">
-        <h1 class="text-4xl md:text-6xl font-bold leading-tight">
+    <div data-aos="fade-up" class="max-w-6xl mx-auto text-center">
+        <h1 class="text-4xl md:text-6xl font-bold leading-tight text-text dark:text-white">
             Convertimos tus ideas en <span class="text-main">Soluciones Digitales</span>
         </h1>
     </div>
-
-    <!-- Video de fondo -->
-    <video class="videoBg absolute inset-0 w-full h-full object-cover z-[-2]" autoplay muted loop playsinline>
-        <!-- Desktop -->
-        <source src="assets/tech/fondo4k.mp4" type="video/mp4" media="(min-width: 1024px)" />
-        <!-- Tablets y móviles -->
-        <source src="assets/tech/fondo.mp4" type="video/mp4" />
-        Tu navegador no soporta videos HTML5 😢
-    </video>
 </section>
+
 
 
 
