--- a/src/app/app.html
+++ b/src/app/app.html
@@ -49,9 +49,10 @@
 <!-- Hero -->
 <section id="inicio" class="bg-background relative text-white py-32 px-6 min-h-[100dvh] flex items-center z-[-20]">
     <!-- Partículas de fondo -->
-    <ng-particles class="absolute inset-0 w-full h-full z-[-1]" #particlesRef [id]="'tsparticles'"
-        [options]="particlesOptionsGlow" [particlesInit]="particlesInit">
-    </ng-particles>
+    <ng-particles class="absolute top-0 left-0 w-full h-full z-[-1]" style="height: 100%; max-height: 100dvh;"
+        #particlesRef [id]="'tsparticles'" [options]="particlesOptionsGlow" [particlesInit]="particlesInit"
+        (particlesLoaded)="onParticlesLoaded($event)"></ng-particles>
+
 
     <div data-aos="fade-up" class="max-w-6xl mx-auto text-center">
         <h1 class="text-4xl md:text-6xl font-bold leading-tight text-text">
@@ -60,8 +61,6 @@
                 Soluciones Digitales
             </span>
         </h1>
-
-
     </div>
 </section>
 
