--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,12 +3,12 @@
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
 
         <!-- Logo -->
-        <a href="#inicio" class="flex items-center gap-2" data-aos="fade-right">
+        <a href="#inicio" class="flex items-center gap-2" data-aos="zoom-in">
             <img src="assets/7id_logo_blanco.svg" alt="7iDeas Logo" class="w-44">
         </a>
 
         <!-- Navegación desktop -->
-        <nav class="hidden md:flex items-center gap-6 text-lg font-medium" data-aos="fade-left">
+        <nav class="hidden md:flex items-center gap-6 text-lg font-medium" data-aos="zoom-in">
             <a href="#inicio" class="hover:text-main transition"><i class="fas fa-home mr-1"></i>Inicio</a>
             <a href="#nosotros" class="hover:text-main transition"><i class="fas fa-users mr-1"></i>Nosotros</a>
             <a href="#servicios" class="hover:text-main transition"><i class="fas fa-briefcase mr-1"></i>Servicios</a>
@@ -54,7 +54,7 @@
             (particlesLoaded)="onParticlesLoaded($event)"></ng-particles>
 
 
-        <div data-aos="fade-up" class="max-w-6xl mx-auto text-center">
+        <div data-aos="zoom-in" class="max-w-6xl mx-auto text-center">
             <h1 class="text-4xl md:text-6xl font-bold leading-tight text-text">
                 Convertimos tus ideas en
                 <span class="text-main glow-text">
@@ -156,20 +156,19 @@
                         Gestión Online
                         <i [ngClass]="showGestionOnline ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
                     </button>
-                    <div *ngIf="showGestionOnline" class="p-6 space-y-4">
-                        <img data-aos="fade-right" src="assets/proyectos/la-anonima/gestion-online.png"
-                            class="rounded-xl shadow-md" />
+                    <div *ngIf="showGestionOnline" class="p-6 space-y-4" data-aos="fade-right">
+                        <img src="assets/proyectos/la-anonima/gestion-online.png"
+                            class="rounded-xl shadow-md w-full h-auto object-cover" loading="lazy"
+                            alt="Gestión Online - La Anónima" />
+
                         <p class="text-zinc-300 text-sm leading-relaxed">
                             Es una web app responsive, desarrollada para la empresa La Anónima, que permite a los
-                            usuarios
-                            realizar diversos
-                            trámites de manera online. Entre las funciones destacadas se encuentran la gestión de
-                            tarjetas,
-                            préstamos, pagos,
-                            autogestión de datos y más. También ofrece recargas, resumen de deuda y trámites para
-                            DirecTV.
+                            usuarios realizar diversos trámites de manera online. Entre las funciones destacadas se
+                            encuentran la gestión de tarjetas, préstamos, pagos, autogestión de datos y más. También
+                            ofrece recargas, resumen de deuda y trámites para DirecTV.
                         </p>
                     </div>
+
                 </div>
 
                 <!-- Proyecto: Back Office App -->
@@ -180,17 +179,18 @@
                         Back Office App
                         <i [ngClass]="showBackOffice ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
                     </button>
-                    <div *ngIf="showBackOffice" class="p-6 space-y-4">
-                        <img data-aos="fade-left" src="assets/proyectos/la-anonima/backoffice.png"
-                            class="rounded-xl shadow-md" />
+                    <div *ngIf="showBackOffice" class="p-6 space-y-4" data-aos="fade-left">
+                        <img src="assets/proyectos/la-anonima/backoffice.png"
+                            class="rounded-xl shadow-md w-full h-auto object-cover" loading="lazy"
+                            alt="BackOffice - La Anónima" />
+
                         <p class="text-zinc-300 text-sm leading-relaxed">
                             Aplicación web interna para procesos clave: alta/baja de productos, onboarding de usuarios,
-                            supervisión de
-                            contratos, automatización legal y métricas de scoring. Ayuda a simplificar tareas manuales y
-                            optimizar procesos
-                            con enfoque estratégico.
+                            supervisión de contratos, automatización legal y métricas de scoring. Ayuda a simplificar
+                            tareas manuales y optimizar procesos con enfoque estratégico.
                         </p>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -221,9 +221,9 @@
                         Gestionate
                         <i [ngClass]="showGestionate ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
                     </button>
-                    <div *ngIf="showGestionate" class="p-6 space-y-4">
-                        <img data-aos="fade-left" src="assets/proyectos/fava/gestionate.png"
-                            class="rounded-xl shadow-md" />
+                    <div *ngIf="showGestionate" class="p-6 space-y-4" data-aos="fade-left">
+                        <img src="assets/proyectos/fava/gestionate.png"
+                            class="rounded-xl shadow-md w-full h-auto object-cover" loading="lazy" />
                         <p class="text-zinc-300 text-sm leading-relaxed">
                             Aplicación desarrollada para el uso interno de las empresas que integran el Grupo Fava (solo
                             versión desktop).
@@ -245,8 +245,8 @@
                         Favacard Online | FOL
                         <i [ngClass]="showFOL ? 'fas fa-chevron-up' : 'fas fa-chevron-down'"></i>
                     </button>
-                    <div *ngIf="showFOL" class="p-6 space-y-4">
-                        <img data-aos="fade-right" src="assets/proyectos/fava/fol.png" class="rounded-xl shadow-md" />
+                    <div *ngIf="showFOL" class="p-6 space-y-4" data-aos="fade-right">
+                        <img src="assets/proyectos/fava/fol.png" class="rounded-xl shadow-md w-full h-auto object-cover" loading="lazy" />
                         <p class="text-zinc-300 text-sm leading-relaxed">
                             Aplicación desarrollada para la empresa Favacard, parte del Grupo Fava (desktop y mobile).
                             Permite realizar
@@ -400,7 +400,7 @@
         </div>
 
         <form #formElement [formGroup]="contactForm" (ngSubmit)="sendEmail()" enctype="multipart/form-data"
-            class="max-w-2xl mx-auto space-y-6">
+            class="max-w-2xl mx-auto space-y-6" data-aos="zoom-in">
             <!-- Nombre -->
             <div>
                 <label for="nombre" class="block text-sm font-semibold mb-1">Nombre</label>
