feat: update footer links and improve layout for certifications

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -704,22 +704,31 @@
     class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-center text-center lg:text-left"
   >
     <!-- Logo + link -->
-    <a
+    <div
+      class="flex flex-col items-center"
       data-aos-anchor-placement="top-bottom"
       data-aos-delay="0"
       data-aos-duration="1000"
       data-aos="fade-left"
-      href="assets/7id_SOFTWARE_S.A.S_9001.pdf"
-      target="_blank"
-      class="flex flex-col items-center justify-center"
     >
-      <img
-        src="assets/iram_logo.svg"
-        alt="Certificación IRAM"
-        class="w-64 mx-auto"
-      />
-      <p class="text-lg mt-2">Siete Ideas Quality Policy</p>
-    </a>
+      <a
+        href="assets/7id_SOFTWARE_S.A.S_9001.pdf"
+        target="_blank"
+        class="flex flex-col items-center justify-center"
+      >
+        <img
+          src="assets/iram_logo.svg"
+          alt="Certificación IRAM"
+          class="w-64 mx-auto"
+        />
+      </a>
+      <a
+        href="https://docs.google.com/document/d/1lev_oaMELhonwblxj5Y7dU2HasNjYz5DLEuualgAp_c/edit?tab=t.hbe78fa4i76l"
+        target="_blank"
+      >
+        <p class="text-lg mt-2">Siete Ideas Environmental Policy</p>
+      </a>
+    </div>
 
     <!-- Info de contacto -->
     <div
@@ -772,6 +781,7 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
         class="w-full h-full"
+        title="Ubicación de Siete Ideas"
       >
       </iframe>
     </div>
